--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <input type="tel" id="number" name="user_number" placeholder="optional"><br>
 
     <label for="address">Street Address</label>
-    <input type="text" id="name" name="user_name" placeholder="eg. 23 street"><br>
+    <input type="text" id="name" name="user_address" placeholder="eg. 23 street"><br>
 
     <label for="city">City</label>
     <input type="text" id="city" name="user_city" required><br>
@@ -107,7 +107,7 @@
             </select><br>
 
     <label for="pcode">Zip Code</label>
-    <input type="text" id="pcode" name="zip_code" class="zip"><br>
+    <input type="text" id="pcode" name="zip_code"><br>
 </fieldset>
     <hr>
 <fieldset>
@@ -118,8 +118,8 @@
     <input type="checkbox" id="js_news" name="user_news"><label for="js_news">JavaScript News</label><br>
 
     <p class="newsletter">Newsletter Format</p>
-    <input type="radio" id="hrml" name="news_format"><label for="html">HTML</label><br>
-    <input type="radio" id="hrml" name="news_format"><label for="html">Plain Text</label><br>
+    <input type="radio" id="html" name="news_format"><label for="html">HTML</label><br>
+    <input type="radio" id="ptext" name="news_format"><label for="ptext">Plain Text</label><br>
 
     <label for="comment" class="btmtag">Other topics you'd like to hear about</label>
     <textarea id="comment" name="user_comment"></textarea><br>
