added form element

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="container">
     <h2>Signup for our newsletter</h2>
     <p class="tagline">Get the latest news on how your code is doing right in your inbox</p>
- 
+ <form action="index.html" method="post">
    <fieldset>
     <legend style="margin:20px 0;">Contact Information</legend>
     <label for="name">Full Name</label>
@@ -125,7 +125,7 @@
     <textarea id="comment" name="user_comment"></textarea><br>
     <button type="button">Sign Up</button>
 </fieldset>
-    
+</form>    
 <footer>
     <p>Copyright the Code Review</p>
 </footer>
