--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
     <input type="tel" id="number" name="user_number" placeholder="optional"><br>
 
     <label for="address">Street Address</label>
-    <input type="text" id="name" name="user_address" placeholder="eg. 23 street"><br>
+    <input type="text" id="address" name="user_address" placeholder="eg. 23 street"><br>
 
     <label for="city">City</label>
     <input type="text" id="city" name="user_city" required><br>
